# SecondProjectDA

./: .gitignore  CMakeLists.txt  Doxyfile  bruteforce.cpp  bruteforce.h  dynamic_prog.cpp  dynamic_prog.h  greedy.cpp  greedy.h  ilp.cpp  ilp.h  ilpo.cpp  knapsack_solver.py  main.cpp  main.md  mainpage.dox  pallet.h  pallets.csv  read_write.cpp  read_write.h  reader.cpp  reader.h  runtime.cpp  truckandpallets.csv
datasets-extra/__MACOSX/: ._datasets-extra
datasets-extra/datasets-extra/: OptimalSolution_05.txt  OptimalSolution_06.txt  OptimalSolution_07.txt  OptimalSolution_08.txt  OptimalSolution_09.txt  OptimalSolution_10.txt  Pallets_01.csv  Pallets_02.csv  Pallets_03.csv  Pallets_04.csv  Pallets_05.csv  Pallets_06.csv  Pallets_07.csv  Pallets_09.csv  Pallets_10.csv  TruckAndPallets_01.csv  TruckAndPallets_02.csv  TruckAndPallets_03.csv  TruckAndPallets_04.csv  TruckAndPallets_05.csv  TruckAndPallets_06.csv  TruckAndPallets_07.csv  TruckAndPallets_08.csv  TruckAndPallets_09.csv  TruckAndPallets_10.csv
doc/html/: annotated.html  bruteforce_8cpp.html  bruteforce_8cpp__incl.map  bruteforce_8cpp__incl.md5  bruteforce_8h_source.html  classes.html  dir_1659819cd7e3f20e7f6badbf79438dcd.html  dir_1659819cd7e3f20e7f6badbf79438dcd_dep.map  dir_1659819cd7e3f20e7f6badbf79438dcd_dep.md5  dir_92b43f68c77dace9717b177d7efaeb9a.html  dir_92b43f68c77dace9717b177d7efaeb9a_dep.map  dir_92b43f68c77dace9717b177d7efaeb9a_dep.md5  dir_94eb3da18399c65702ea7b90dc0ff735.html  dir_94eb3da18399c65702ea7b90dc0ff735_dep.map  dir_94eb3da18399c65702ea7b90dc0ff735_dep.md5  dynamic__prog_8cpp.html  (+42 more)
(+75 files in other folders)
